# denk

./: .gitignore  CMakeLists.txt  Make  README.md  main.cc  todo.txt
core/: core.hh
core/activation/: activation.hh  sigmoid.cc  sigmoid.hh
core/activator/: activator.hh  identity.cc  identity.hh  leakyrelu.cc  leakyrelu.hh  relu.cc  relu.hh  sigmoid.cc  sigmoid.hh  tanh.cc  tanh.hh
core/layer/: layer.cc  layer.hh
core/logger/: logger.c  logger.h
core/loss/: bce.cc  bce.hh  loss.hh  mse.cc  mse.hh
core/matrix/: matrix.cc  matrix.hh
core/optimizer/: gradientdescent.cc  gradientdescent.hh  momentum.cc  momentum.hh  newtonsmethod.cc  newtonsmethod.hh  optimizer.hh  sgd.cc  sgd.hh
core/status/: status.h
core/tensor/: tensor.cc  tensor.hh
core/tests/activator/: CMakeLists.txt
core/tests/activator/sigmoid/: test_sigmoid.cc
core/tests/matrix/: CMakeLists.txt  test_matrix_constructor.cc
model/: model.hh
model/bnn/: bnn.cc  bnn.hh
model/ffnn/: ffnn.cc  ffnn.hh
models/bnn/layer/: layer.hh
